# cmake_learn

./: .gitignore  BASConfig.h.in  CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  mian.cpp  run.sh
include/: adder.cpp  adder.h
